# FastEngine

./: .gitignore  ADVANCED_EDITOR_GUIDE.md  CMakeLists.txt  CMakeLists_advanced_editor.txt  CMakeLists_editor.txt  CMakeLists_sdl_editor.txt  EDITORS_SUMMARY.md  EDITOR_GUIDE.md  FINAL_PROJECT_SUMMARY.md  Makefile  QT_EDITOR_COMPLETE_SUCCESS_REPORT.md  QT_EDITOR_COMPLETE_TEST_REPORT.md  QT_EDITOR_FINAL_TEST_REPORT.md  QT_EDITOR_FULL_TEST_PLAN.md  QT_EDITOR_IMPLEMENTATION_REPORT.md  QT_EDITOR_TESTING_REPORT.md  QUICK_START_GUIDE.md  README.md  advanced_editor.cpp  config.json  dependencies.md  run_advanced_tests.sh  run_all.sh  run_editors.sh  run_unit_tests.sh  test_editor_features.sh  test_qt_editor.sh
advanced_editor/: CMakeLists.txt  advanced_editor.cpp
apps/snake_cros_app/: CMakeLists.txt  Game.cpp  Game.h  GameUpdateSystem.cpp  GameUpdateSystem.h  README.md  main.cpp
editors/qt/: CMakeLists.txt  ConsolePanel.cpp  FastEngineIntegration.cpp  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MainWindow.cpp  MainWindow.h  README.md  SceneView2D.h  SceneView3D.cpp  SceneView3D.h  WorkingEditor.cpp  main.cpp
examples/: 3d_test.cpp  CMakeLists.txt  Game.cpp  Game.h  README.md  advanced_editor_test.cpp  advanced_features_test.cpp  blueprint_editor_test.cpp  complete_test.cpp  component_test.cpp  debug_test.cpp  debug_tools_test.cpp  engine_test.cpp  export_test.cpp  main.cpp  minimal_test.cpp  performance_test.cpp  platform_test.cpp  scene_editor_simple_test.cpp  shader_test.cpp  simple_test.cpp
photo_editor/: CMakeLists.txt  COMPLETE_TOOLS_DOCUMENTATION.md  COMPLEX_TESTING_REPORT.md  DETAILED_LOGGING.md  DUPLICATE_RECTANGLE_FIX.md  FINAL_SELECTION_FIX.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGGING_SYSTEM.md  MULTIPLE_SELECTION_FIX.md  PHOTO_EDITOR_ANALYSIS.md  REALTIME_SELECTION_FIX.md  SELECTION_FIX_DOCUMENTATION.md  TESTING_REPORT.md  demo_complete_tools.sh  demo_detailed_logging.sh  demo_duplicate_rect_fix.sh  demo_final_selection_fix.sh  demo_logging.sh  demo_multiple_selection_fix.sh  demo_realtime_selection.sh  demo_selection_fix.sh  run_new_features_tests.sh  run_simple_tests.sh  run_tests.sh  test_tools.sh
photo_editor/include/: AutoSaveManager.h  BatchProcessor.h  BrushManager.h  BrushTool.h  CanvasWidget.h  ClipboardHistory.h  DocumentManager.h  EffectStyle.h  EraserTool.h  ExportManager.h  EyedropperTool.h  FilterManager.h  GradientEditor.h  GradientTool.h  GridOverlay.h  HistoryManager.h  HotkeyManager.h  ImageDocument.h  ImageProcessor.h  Layer.h  LayerManager.h  LayerPanel.h  LogPanel.h  Logger.h  MainWindow.h  MetadataViewer.h  ModernPhotoEditor.h  MoveTool.h  PaintBucketTool.h  SelectionTool.h  SimpleMainWindow.h  TemplateManager.h  ThemeManager.h  Tool.h  ToolManager.h  TooltipManager.h
photo_editor/src/: AutoSaveManager.cpp  BatchProcessor.cpp  BrushManager.cpp  BrushTool.cpp  CanvasWidget.cpp  ClipboardHistory.cpp  DocumentManager.cpp  EffectStyle.cpp  EraserTool.cpp  ExportManager.cpp  EyedropperTool.cpp  FilterManager.cpp  GradientEditor.cpp  GridOverlay.cpp  HistoryManager.cpp  HotkeyManager.cpp  ImageDocument.cpp  ImageProcessor.cpp  Layer.cpp  LayerManager.cpp  LayerPanel.cpp  LogPanel.cpp  Logger.cpp  MainWindow.cpp  MetadataViewer.cpp  ModernPhotoEditor.cpp  MoveTool.cpp  SelectionTool.cpp  SimpleMainWindow.cpp  ThemeManager.cpp  Tool.cpp  ToolManager.cpp  TooltipManager.cpp  main.cpp
photo_editor/tests/: CMakeLists.txt  CMakeLists_new_features.txt  CMakeLists_simple.txt  EyedropperToolTest.cpp  EyedropperToolTest.h  HotkeyManagerTest.cpp  HotkeyManagerTest.h  IntegrationTest.cpp  IntegrationTest.h  MoveToolTest.cpp  MoveToolTest.h  StrictTest.cpp  StrictTest.h  TooltipManagerTest.cpp  TooltipManagerTest.h  main.cpp
photo_editor/tests/unit/: test_auto_save_manager.cpp  test_basic.cpp  test_batch_processor.cpp  test_clipboard_history.cpp  test_document_manager.cpp  test_export_manager.cpp  test_grid_overlay.cpp  test_metadata_viewer.cpp  test_simple_features.cpp  test_theme_manager.cpp
simulator/: CLI_USAGE.md  CMakeLists.txt  Makefile  README.md  USAGE.md
simulator/configs/: cross_platform_tests.conf  integration_tests.conf  performance_tests.conf  stress_tests.conf  unit_tests.conf
simulator/examples/: CMakeLists.txt  cli_main.cpp  main.cpp  scene_editor_test.cpp
simulator/include/ProjectSimulator/: AssetBrowser.h  CLI.h  Hierarchy.h  Inspector.h  Project.h  ProjectLoader.h  ProjectManager.h  ProjectSimulator.h  ProjectValidator.h  SceneEditor.h  SceneEditorSimulator.h  SimulationEngine.h  TestRunner.h  UIManager.h
simulator/scripts/: build_android.sh  build_desktop.sh  build_ios.sh  ci_test.sh  demo_cli.sh  simulator-cli  test_all_projects.sh  test_project.sh  test_simulator.sh
simulator/src/core/: CLI.cpp  ProjectManager.cpp  ProjectSimulator.cpp  SceneEditorSimulator.cpp  SimulationEngine.cpp  TestRunner.cpp
simulator/src/projects/: Project.cpp  (+2 more)
src/: CMakeLists.txt
src/Systems/: AnimationSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
src/ai/: BehaviorTree.cpp  NavMesh.cpp  Pathfinding.cpp
src/audio/: AudioManager.cpp  Sound.cpp
src/cinematic/: CinematicEditor.cpp
src/components/: Animator.cpp  AudioSource.cpp  Collider.cpp  RigidBody.cpp  Sprite.cpp  Text.cpp  Transform.cpp
src/core/: Engine.cpp  Entity.cpp  World.cpp
src/debug/: Console.cpp  Profiler.cpp  Wireframe.cpp
src/editor/: AnimationEditor.cpp  BlueprintEditor.cpp  BlueprintNode.cpp  MaterialEditor.cpp  ParticleEditor.cpp  UIBuilder.cpp  UIElement.cpp
src/export/: ProjectExporter.cpp
src/input/: GamepadInput.cpp  InputManager.cpp  KeyboardInput.cpp  TouchInput.cpp
src/network/: NetworkManager.cpp
src/physics/: Collision.cpp
src/platform/: FileSystem.cpp  Platform_Android.cpp  Platform_Desktop.cpp  Platform_iOS.cpp  Platform_iOS.mm  Timer.cpp  Window.cpp
src/plugins/: PluginManager.cpp
src/profiling/: PerformanceProfiler.cpp
src/render/: Camera.cpp  ImageLoader.cpp  Lighting.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/resources/: ResourceManager.cpp
src/ui/: ButtonManager.cpp
(+210 files in other folders)
